--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>React Time</title>
-  <link rel="stylesheet" type="text/css" href="./lib/css/main.css" />
+  <link rel="stylesheet" type="text/css" href="./css/main.css" />
 </head>
 <body>
   <div id="app"></div>
